--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
 }
 
 .show {
-  height: 242px;
+  height: 230px;
 }
 
 /* CSS for topSection */
@@ -83,4 +83,48 @@ a {
   to {
     transform: translateX(-15px);
   }
+}
+
+/*css for registration component*/
+/* Style the container for inputs */
+.container {
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+/* The message box is shown when the user clicks on the password field */
+#message {
+  display:none;
+  background: white;
+  color: #031F3C;
+  position: relative;
+  padding: 10px 20px;
+  margin-top: 10px;
+}
+
+#message p {
+  padding: 5px 0px 5px 35px;
+  font-size: 14px;
+}
+
+/* Add a green text color and a checkmark when the requirements are right */
+.valid {
+  color: green;
+}
+
+.valid:before {
+  position: relative;
+  left: -35px;
+  content: "✔";
+}
+
+/* Add a red text color and an "x" when the requirements are wrong */
+.invalid {
+  color: red;
+}
+
+.invalid:before {
+  position: relative;
+  left: -35px;
+  content: "✖";
 }
